objects/Application_Document_Config__c.object
<CustomObject>
    <fields>
        <fullName>ABF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates if this document belongs to ABF enrollment or not.</description>
        <label>ABF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Checks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACA</fullName>
                </value>
                <value>
                    <fullName>ABF</fullName>
                    <isActive>false</isActive>
                    <label>ABF</label>
                </value>
                <value>
                    <fullName>MEWA</fullName>
                    <isActive>false</isActive>
                    <label>MEWA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId_c__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEP_Indicator__c</fullName>
        <label>CEP Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Change Reason</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doc_Type__c</fullName>
        <label>Doc Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LGAPP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Order__c</fullName>
        <label>Document Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERISA_Qualified__c</fullName>
        <label>ERISA Qualified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERISA</fullName>
                </value>
                <value>
                    <fullName>Non-ERISA</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Assistance_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Assistance Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Files_Parameter__c</fullName>
        <inlineHelpText>Please select a Parameter for which the Expected # files will be applicable.</inlineHelpText>
        <label>Files Parameter</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ICR</fullName>
                </value>
                <value>
                    <fullName>LOB</fullName>
                </value>
                <value>
                    <fullName>QLI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <label>Financing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Services Only</fullName>
                </value>
                <value>
                    <fullName>Cost Plus</fullName>
                </value>
                <value>
                    <fullName>Flat Fee / % of Savings</fullName>
                </value>
                <value>
                    <fullName>JAA (Jointly Administered Arrangement)</fullName>
                </value>
                <value>
                    <fullName>Minimum Premium</fullName>
                </value>
                <value>
                    <fullName>Modified Cost Plus</fullName>
                </value>
                <value>
                    <fullName>PEPM</fullName>
                </value>
                <value>
                    <fullName>Percent of Savings</fullName>
                </value>
                <value>
                    <fullName>PMPM</fullName>
                </value>
                <value>
                    <fullName>Cost Plus Alternate Funded</fullName>
                </value>
                <value>
                    <fullName>FI – Deposit Premium</fullName>
                </value>
                <value>
                    <fullName>FI – Refund Agreement</fullName>
                </value>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Non-Refunding</fullName>
                </value>
                <value>
                    <fullName>Refunding</fullName>
                </value>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>MCS Network Rental</fullName>
                </value>
                <value>
                    <fullName>Contingent Premium</fullName>
                </value>
                <value>
                    <fullName>JIA (Jointly Integrated Arrangement)</fullName>
                </value>
                <value>
                    <fullName>ABF (Anthem Balanced Funding)</fullName>
                </value>
                <value>
                    <fullName>EBF (Empire Balanced Funding)</fullName>
                </value>
                <value>
                    <fullName>ASC (Administrative Service Contract)</fullName>
                </value>
                <value>
                    <fullName>ASO/FI</fullName>
                </value>
                <value>
                    <fullName>Level Funded/Fully Insured</fullName>
                </value>
                <value>
                    <fullName>JAA (Full Service) - ANA Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MBRAPPPDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>ASO/FI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <description>Used to categorize Documents based on Implementation Case Type</description>
        <label>Implementation Type</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Full Group Term</fullName>
                </value>
                <value>
                    <fullName>Change Request Off Cycle</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Pre Work</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Off Cycle</fullName>
                    <isActive>false</isActive>
                    <label>Off Cycle</label>
                </value>
                <value>
                    <fullName>Renewal	Renewal</fullName>
                    <isActive>false</isActive>
                    <label>Renewal	Renewal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Of_Business__c</fullName>
        <label>Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABA</fullName>
                </value>
                <value>
                    <fullName>Accident</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Benefits Admin</fullName>
                </value>
                <value>
                    <fullName>Commercial Act Wise</fullName>
                </value>
                <value>
                    <fullName>Commercial AIM</fullName>
                </value>
                <value>
                    <fullName>Commercial Blue Distinction</fullName>
                </value>
                <value>
                    <fullName>Commercial Buy-Ups</fullName>
                </value>
                <value>
                    <fullName>Commercial Clinical</fullName>
                </value>
                <value>
                    <fullName>Commercial Engage</fullName>
                </value>
                <value>
                    <fullName>Commercial Subrogation</fullName>
                </value>
                <value>
                    <fullName>CONEXIS</fullName>
                </value>
                <value>
                    <fullName>Critical Illness</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Expatriate</fullName>
                </value>
                <value>
                    <fullName>FSA</fullName>
                    <label>FSA (Non-ActWise)</label>
                </value>
                <value>
                    <fullName>Group Companion</fullName>
                </value>
                <value>
                    <fullName>Health and Wellness</fullName>
                </value>
                <value>
                    <fullName>Hospital Indemnity</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Network based</fullName>
                </value>
                <value>
                    <fullName>Non-Blue Health and Wellness</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pooled_Non_Pooled__c</fullName>
        <label>Pooled_Non_Pooled</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pooled</fullName>
                </value>
                <value>
                    <fullName>Non-Pooled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Plan</fullName>
                    <isActive>false</isActive>
                    <label>Plan</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>11.0 Products</fullName>
                </value>
                <value>
                    <fullName>3 Tier</fullName>
                </value>
                <value>
                    <fullName>3-Tier Drug</fullName>
                </value>
                <value>
                    <fullName>5M</fullName>
                </value>
                <value>
                    <fullName>ABA</fullName>
                </value>
                <value>
                    <fullName>ABF</fullName>
                </value>
                <value>
                    <fullName>Access Blue New England</fullName>
                </value>
                <value>
                    <fullName>Accident</fullName>
                </value>
                <value>
                    <fullName>ACO</fullName>
                </value>
                <value>
                    <fullName>ActWise Open Access HRA</fullName>
                </value>
                <value>
                    <fullName>Actwise Open Access HSA</fullName>
                </value>
                <value>
                    <fullName>ADV ONE</fullName>
                </value>
                <value>
                    <fullName>AHK POS</fullName>
                </value>
                <value>
                    <fullName>AHK POS OA</fullName>
                </value>
                <value>
                    <fullName>AHM/Bloom</fullName>
                </value>
                <value>
                    <fullName>AHM/Bloom Blue View Vision</fullName>
                </value>
                <value>
                    <fullName>AHM/Bloom Dental Complete</fullName>
                </value>
                <value>
                    <fullName>AHM/Bloom Life</fullName>
                </value>
                <value>
                    <fullName>AHM/Bloom LTD</fullName>
                </value>
                <value>
                    <fullName>AHM/Bloom STD</fullName>
                </value>
                <value>
                    <fullName>AHR</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Anthem Balanced Funding</fullName>
                </value>
                <value>
                    <fullName>Anthem Health Marketplace</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>ASO Between 1,001-25,000 members</fullName>
                </value>
                <value>
                    <fullName>ASO Between 151-500 members</fullName>
                </value>
                <value>
                    <fullName>ASO Between 501-1,000 members</fullName>
                </value>
                <value>
                    <fullName>ASO Over 25,000 members</fullName>
                </value>
                <value>
                    <fullName>ASO Under 150 members</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Stage__c</fullName>
        <label>Product Stage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Declined to Quote</fullName>
                </value>
                <value>
                    <fullName>IGAP Dead</fullName>
                </value>
                <value>
                    <fullName>IGAP In Progress</fullName>
                </value>
                <value>
                    <fullName>IGAP Lost</fullName>
                </value>
                <value>
                    <fullName>IGAP Sold</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Jeopardy</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Not renewing in Current Period</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profiles__c</fullName>
        <description>Used to categorize the documents based on profiles.</description>
        <label>Profiles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local Sales</fullName>
                </value>
                <value>
                    <fullName>Local Sales Dual</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Specialty Dual</fullName>
                </value>
                <value>
                    <fullName>Specialty Post Sales</fullName>
                </value>
                <value>
                    <fullName>Specialty Post Sales Dual</fullName>
                </value>
                <value>
                    <fullName>Local Implementation</fullName>
                </value>
                <value>
                    <fullName>Local Implementation Dual</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
                <value>
                    <fullName>SME Dual</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>ANA</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rate Sheet</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_Name__c</columns>
        <columns>State__c</columns>
        <columns>Line_Of_Business__c</columns>
        <columns>Required__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Files_Parameter__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Additional_Checks__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DC-{0}</displayFormat>
        <label>Document Config Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LGA_Check_Internal_Only</fullName>
        <active>true</active>
        <description>Validation Rule to check if document is marked as Internal Only , it Can&apos;t be set to Required</description>
        <errorConditionFormula>AND( NOT($User.BypassValidation__c),Internal_Only__c,Required__c)</errorConditionFormula>
        <errorMessage>Required Document Config record cannot be Internal Only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preventing_Product_Category_to_be_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND((!$User.BypassValidation__c),ISPICKVAL( Files_Parameter__c,&quot;QLI&quot;), ISPICKVAL( Product_Category__c,&apos;&apos;))</errorConditionFormula>
        <errorMessage>Product Category should be filled when files parameter is &apos;QLI&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Stage_OR_Category_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(!$User.BypassValidation__c), 
OR(
AND(NOT(ISPICKVAL(Product_Category__c ,&apos;&apos;)) ,ISBLANK(Product_Stage__c)) ,
AND(NOT(ISBLANK(Product_Stage__c)) ,ISPICKVAL( Product_Category__c ,&apos;&apos;)) 
) 
)</errorConditionFormula>
        <errorMessage>Please select a value for Product Stage when  Product Category is filled or vice versa.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_field_changes_for_change_reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND((!$User.BypassValidation__c),OR(ISCHANGED(Implementation_Type__c),ISCHANGED( Line_Of_Business__c),ISCHANGED( State__c)),OR(Change_Reason__c==&apos;&apos;,NOT(ISCHANGED(Change_Reason__c))))</errorConditionFormula>
        <errorMessage>Please enter the change reason.</errorMessage>
    </validationRules>
</CustomObject>